# genetic

./: README.md  genetic.cabal  stack.yaml
Genetic/: Core.hs  Crossover.hs  Instance.hs  Mutation.hs  ScoreScaling.hs  Selection.hs
app/: Main.hs
test/: Tests.hs
test/Tests/: Core.hs
